--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/cis188/ci-demo.git"
+    "url": "https://github.com/damian2221/ci-demo.git"
   }
 }
